uvadlc_practicals_2020-master/assignment_2/2_recurrentnns_gnns/code/release/Part 2/part_2_results/part2_6892903.out
  File "train.py", line 187
    write_sentences("sentences.txt", num_sentences=10, step, config, model, dataset, tau=1)
                                                      ^
srun: error: r30n6: task 0: Exited with exit code 1
SyntaxError: positional argument follows keyword argument
